<resources>
    <string name="app_name">CheckoutPractical</string>
    <string name="action_settings">Settings</string>
    <string name="btn_buy">Buy Burger for £10</string>
    <!-- Strings used for fragments for navigation -->
    <string name="proceed_to_checkout_fragment_label">Add Card</string>
    <string name="secure_payment_webview_fragment_label">3D Secure Payment</string>
    <string name="payment_conclusion_fragment_label">PaymentConclusion</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="proceed_checkout">Proceed to Pay</string>
    <string name="go_to_add_card">Go to Add card</string>
    <string name="please_wait_msg">Please don\'t press back or leave the page until payment is being completed…</string>
    <string name="payment_success_msg">Payment successfully completed</string>
    <string name="success_url">https://www.success.com</string>
    <string name="fail_url">https://fail.com</string>
    <string name="msg_use_ui_back">Use UI back button.</string>
    <string name="payment_in_progress">Payment in Progress</string>
    <string name="payment_in_completed">Payment Completed</string>
    <string name="payment_not_started">Payment not Started</string>
    ******************hint messages**************
    <string name="hint_enter_cvv">Enter CVV</string>
    <string name="hint_enter_expiry_date">Enter Expiry date (MM/YYYY)</string>
    <string name="hint_enter_card_number">Enter Card number</string>

    *******************errors***************************
    <string name="generic_error">Something went wrong.</string>
    <string name="connection_error">Please check your internet connection</string>
    <string name="server_error">A server error occurred, please try again later</string>
    <string name="payment_fail_msg">Payment failed</string>
    <string name="error_invalid_number">Please enter valid card number</string>
    <string name="error_invalid_expiry_date">Please enter valid expiry date of card</string>
    <string name="error_invalid_cvv">Please enter valid CVV</string>
    <string name="dont_press_back_while_payment">You can not press back button while payment is in processing state.</string>
    <string name="checkout_sdk_demo">CheckoutSDKDemo</string>
    <string name="checkout_sdk_ui_demo">CheckoutSDKUIDemo</string>
    <string name="secret_key">pk_test_6e40a700-d563-43cd-89d0-f9bb17d35e73</string>
    <string name="token_generated">Token generated</string>
    <string name="network_error">Network error</string>


</resources>