<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.checkoutcom.checkoutpractical.ui.viewmodels.ProceedCheckOutViewModel" />

        <variable
            name="viewModel"
            type="ProceedCheckOutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_10"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBarCheckOut"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.50"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_card_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTintMode="src_atop"
            tools:layout_editor_absoluteX="@dimen/padding_4">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_card_number"
                android:inputType="number"
                android:maxLength="16"
                android:text="@={viewModel.cardNumber}"
                android:textColorHint="@color/dark_gray"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_expiry_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789/"
                android:hint="@string/hint_enter_expiry_date"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:text="@={viewModel.cardExpiry}"
                android:textColorHint="@color/dark_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_cvv"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_input_expiry_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_cvv"
                android:inputType="number"
                android:maxLength="4"
                android:text="@={viewModel.cardCVV}"
                android:textColorHint="@color/dark_gray" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="@dimen/padding_20"
            android:layout_marginVertical="@dimen/padding_16"
            android:text="@string/proceed_checkout"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_16sp"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_cvv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>